# sev-certify

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: build-and-release.yml  update-certification-matrix.yml
docs/: architecture-module-flow.md  certifications.md  how-to-generate-certs.md  snp-config-commit-research.md  snp-config-commit-test-plan.md  testing-harness-architecture.md  troubleshooting.md
docs/features/: tcb-config-commit.md
images/: Makefile  README.md
images/guest-centos-10/: mkosi.conf
images/guest-debian-13/: mkosi.conf
images/guest-debian-forky/: mkosi.conf
images/guest-fedora-41/: mkosi.conf
images/guest-rocky-10/: mkosi.conf
images/guest-ubuntu-25.04/: mkosi.conf
images/guest-ubuntu-25.10/: mkosi.conf
images/guest-ubuntu-26.04/: mkosi.conf
images/host-debian-13/: mkosi.conf
images/host-debian-forky/: mkosi.conf
images/host-ubuntu-25.04/: mkosi.conf
images/host-ubuntu-25.10/: mkosi.conf
images/host-ubuntu-26.04/: mkosi.conf
modules/beacon/: mkosi.build
modules/embed-guest-image/: mkosi.build
modules/guest/: mkosi.conf
modules/host/: mkosi.conf
modules/proc-model/: mkosi.postinst
modules/snpguest-build/: mkosi.build
modules/snphost/: mkosi.build
modules/test/host/: mkosi.conf
sev_verify/: README.md  __init__.py  __main__.py  cli.py  environment.py  guest_vsock.py  models.py  os_info.py  output.py  runner.py  vm_profile.py
sev_verify/cert_tests/c3_0/: manifest.toml
sev_verify/cert_tests/cert_3_0/: manifest.toml
(+22 files in other folders)
